--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="6;url=index.html">
+  <meta http-equiv="refresh" content="6;url=index.html1">
   <title>Welcome with Snow</title>
   <style>
     * {
